--- a/requirement.tex
+++ b/requirement.tex
@@ -34,7 +34,7 @@
 
     \subsection{参考资料}
     《实验指导文档》
-    
+
     《计算机组成与设计硬件/软件接口》
 
 \section{功能需求}
@@ -100,7 +100,7 @@
         Status[0]:EXL = 0
 
         Status[0]:ERL = 0
-
+        
         此时设置 IM（Status[16:9]）位和 IE 位可以使能中断。
 
         EXL 与 ERL 任一位置 1 都可使系统进入 Kernel 模式，否则为 User 模式。异常处理开始时，将 Status[1] 赋值为 1，在执行 ERET 指令时将 Status[1]赋值为 0。
@@ -114,12 +114,12 @@
 
     \subsection{MMU}
     内存管理单元 MMU 通过TLB异常实现。我们需要在CPU上实现一个TLB列表，每次访存需要通过TLB列表把线性地址（即虚拟地址）转化为物理地址。此外，还需要实现TLB重填的功能，包括设计若干CP0寄存器，并实现TLB重填指令 tlbwi 。
-    
+
         \paragraph{MIPS 内存地址分配}
-        
+
         本实验中，地址0x80000000以上，属于kseg0区域，供操作系统内核使用，这一区域不进行map，因此，在我们实现的 MMU 中，应当判断地址是否大于0x80000000，若是，则不进行映射，若否，进入TLB查找阶段。
         从0x00000000到0x80000000是KUSEG区域，这块内存会被用于用户进程的虚存分配。
-        
+
         \paragraph{通过TLB异常实现MMU}
         \begin{enumerate}
         \item CPU发起访存，使用了32位线性地址。TLB模块抽取线性地址中的前20位，作为VPN，在TLB表中查找。若查找得到，则根据表中的PPN，结合offset得到物理地址，然后直接访存。
@@ -128,17 +128,17 @@
         \item 此时，CPU根据实现了的 tlbwi 指令，利用CP0寄存器中的值，重新填充TLB中的某一项。此处，轮流重填TLB中的项（也可以随机填充）。
         \item mips异常机制会重新执行上一条代码，此时能够正常访存。
         \end{enumerate}
-   
+
     \subsection{异常处理}
     本实验中，由硬件检测到异常发生，填写相应的 CP0 寄存器后，跳转到操作系统的异常处理函数。操作系统根据 CP0 寄存器的值判断异常的类型，分发到相应的处理代码。
-    
+
         \subsubsection{异常向量}
         MIPS32 CPU上有两组异常处理向量，根据SR(BEV)位(SR寄存器的bit22)切换：
-        
-        \paragraph{BEV==1: ROM上的异常处理} \\
-        
+
+        \paragraph{BEV==1: ROM上的异常处理} 
+
         这是我们CPU刚刚启动时处于的状态。由于操作系统的启动还没有完成，我们的异常处理向量被放在ROM固件中。由于没有缓存系统，所以没有缓存错误的入口点。我们的CPU也没有支持EIC异常。由于我们的操作系统还没有启动，我们在实现中简单的将所有的ROM异常都直接进行无限循环。
-        
+
         我们将会使用具体的异常向量表如下：
 
         \begin{table}[H]
@@ -154,8 +154,8 @@
         \end{tabular}
         \end{table}
 
-        \paragraph{BEV==0: RAM上的异常处理} \\
-        
+        \paragraph{BEV==0: RAM上的异常处理} 
+
         当操作系统完成自己的异常向量的装载时，就会将此位置零。并且向C0寄存器堆中的EBase寄存器写入我们的异常向量的基址。
         实际上的异常向量基址Base为EBase[29:12]\&0...0，此时我们会用到的异常向量表如下：
 
@@ -202,7 +202,7 @@
         \hline
         \end{tabular}
         \end{table}
-        
+
         可能用到的中断号如下：
         \begin{table}[H]
         \centering
@@ -220,7 +220,7 @@
         \hline
         \end{tabular}
         \end{table}
- 
+
         \subsubsection{CP0寄存器设置}
             \paragraph{EPC}
             如果Cause(BD)为1，也就是异常发生在延迟槽中，实际发生异常的指令就为EPC+4。但是我们返回执行的位置仍然应该是EPC，否则分枝指令的跳转就会无法执行。因此CPU必须在内部记录指令是否在延迟槽内。如果在延迟槽内的指令发生了异常，应该设置PC=EPC-4。
@@ -236,17 +236,17 @@
 %    PageMask \$5
 %    指令
 %    mfc0 mtc0 tlbwi
-    
-    
+
+
     \subsection{串口}
-    
+
     \subsection{指令集}
     我们采用的是 MIPS32 的标准子集作为指令集，共计 48 条指令，每一条指令是一个 32 位字。由于编译器版本不同，无法保证囊括所有所需指令，可能需要实现这 48 条以外的指令。
 
     具体的指令内容详见附录 A 。
 
     \subsection{数据通路}
-    
+
 
 \section{性能需求}
 实现多周期流水 CPU ，用旁路处理数据冒险。主频取决于流水线耗时最长的模块。
