--- a/requirement.tex
+++ b/requirement.tex
@@ -1,6 +1,6 @@
 \documentclass{template}
 \usepackage{multirow}
-%\usepackage{CJK}
+\usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage{appendix}
 \usepackage{float}
@@ -22,7 +22,7 @@
 
     任务提出者：刘卫东老师~~白晓颖老师
 
-    开发者：计32~乔奕 ~~ 计44~郭嘉丞 ~~ 计35 陈雨兰
+    开发者：计32~乔奕 ~~ 计44~郭嘉丞 ~~ 计35~陈雨兰
 
     \subsection{实验目标}
     \begin{enumerate}
@@ -35,12 +35,12 @@
     \subsection{参考资料}
     《实验指导文档》
 
-    《计算机组成与设计硬件/软件接口》
+    《计算机组成与设计~硬件/软件接口》
 
 \section{功能需求}
 
     \subsection{ALU}
-    ALU 负责双操作数的算术逻辑运算，由 ALUOp 信号控制，完成数据和地址的算术、逻辑、移位运算，输出结果。其中，乘法指令不通过 ALU 计算，由乘法器支持，PC + 4 运算由专门的加法器支持。
+    ALU 负责双操作数的算术逻辑运算，由 ALUOp 信号和指令的 funct 字段控制，完成数据和地址的算术、逻辑、移位运算，输出结果。其中，乘法指令不通过 ALU 计算，由乘法器支持，PC + 4 运算由专门的加法器支持。
 
     为支持流水线 CPU 的正常运行，部分运算如跳转指令的地址计算不通过 ALU 。
 
@@ -91,7 +91,7 @@
     \end{table}
 
 
-        \paragraph{Status 寄存器}
+        \paragraph{Status}
         Status 寄存器的区域联合作用，可以创建协理器的工作模式。
         当以下所有条件都成立时启用中断：
 
@@ -100,17 +100,20 @@
         Status[0]:EXL = 0
 
         Status[0]:ERL = 0
-        
+
         此时设置 IM（Status[16:9]）位和 IE 位可以使能中断。
 
         EXL 与 ERL 任一位置 1 都可使系统进入 Kernel 模式，否则为 User 模式。异常处理开始时，将 Status[1] 赋值为 1，在执行 ERET 指令时将 Status[1]赋值为 0。
 
-        \paragraph{Cause 寄存器}
+        \paragraph{Cause}
         Cause 寄存器记录了最近一次异常的原因，也控制软件中断请求以及中断处理派分的向量。
         Cause[6:2] 表示异常号。
 
-        \paragraph{Count 寄存器}
+        \paragraph{Count}
         每经过一个周期，Count 自增 1 ，需内置一个加法器。
+        
+        \paragraph{EPC}
+        如果Cause(BD)为1，也就是异常发生在延迟槽中，实际发生异常的指令就为EPC+4。但是我们返回执行的位置仍然应该是EPC，否则分枝指令的跳转就会无法执行。因此CPU必须在内部记录指令是否在延迟槽内。如果在延迟槽内的指令发生了异常，应该设置PC=EPC-4。
 
     \subsection{MMU}
     内存管理单元 MMU 通过TLB异常实现。我们需要在CPU上实现一个TLB列表，每次访存需要通过TLB列表把线性地址（即虚拟地址）转化为物理地址。此外，还需要实现TLB重填的功能，包括设计若干CP0寄存器，并实现TLB重填指令 tlbwi 。
@@ -118,16 +121,15 @@
         \paragraph{MIPS 内存地址分配}
 
         本实验中，地址0x80000000以上，属于kseg0区域，供操作系统内核使用，这一区域不进行map，因此，在我们实现的 MMU 中，应当判断地址是否大于0x80000000，若是，则不进行映射，若否，进入TLB查找阶段。
+        
         从0x00000000到0x80000000是KUSEG区域，这块内存会被用于用户进程的虚存分配。
 
         \paragraph{通过TLB异常实现MMU}
-        \begin{enumerate}
-        \item CPU发起访存，使用了32位线性地址。TLB模块抽取线性地址中的前20位，作为VPN，在TLB表中查找。若查找得到，则根据表中的PPN，结合offset得到物理地址，然后直接访存。
-        \item 若无法找到，将该线性地址传入CP0中的vaddr寄存器，然后触发TLBmiss异常，进入异常处理程序。
-        \item 操作系统取出vaddr中的值，即访存失败的线性地址。若地址所在页表不存在，则建立新表。之后，把新表所对应的物理地址，存入CP0 寄存器中。之后，操作系统利用汇编语句直接调用tlbwi
-        \item 此时，CPU根据实现了的 tlbwi 指令，利用CP0寄存器中的值，重新填充TLB中的某一项。此处，轮流重填TLB中的项（也可以随机填充）。
-        \item mips异常机制会重新执行上一条代码，此时能够正常访存。
-        \end{enumerate}
+        CPU发起访存，使用了32位线性地址。TLB模块抽取线性地址中的前20位，作为VPN，在TLB表中查找。若查找得到，则根据表中的PPN，结合offset得到物理地址，然后直接访存。
+        
+        若无法找到，将该线性地址传入CP0中的vaddr寄存器，然后触发TLBmiss异常，进入异常处理程序。操作系统取出vaddr中的值，即访存失败的线性地址。若地址所在页表不存在，则建立新表。之后，把新表所对应的物理地址，存入CP0 寄存器中。之后，操作系统利用汇编语句直接调用tlbwi。此时，CPU根据实现了的 tlbwi 指令，利用CP0寄存器中的值，重新填充TLB中的某一项。此处，轮流重填TLB中的项（也可以随机填充）。
+        
+        MIPS 异常机制会重新执行上一条代码，此时能够正常访存。
 
     \subsection{异常处理}
     本实验中，由硬件检测到异常发生，填写相应的 CP0 寄存器后，跳转到操作系统的异常处理函数。操作系统根据 CP0 寄存器的值判断异常的类型，分发到相应的处理代码。
@@ -135,11 +137,9 @@
         \subsubsection{异常向量}
         MIPS32 CPU上有两组异常处理向量，根据SR(BEV)位(SR寄存器的bit22)切换：
 
-        \paragraph{BEV==1: ROM上的异常处理} 
+        \paragraph{BEV==1: ROM上的异常处理}
 
-        这是我们CPU刚刚启动时处于的状态。由于操作系统的启动还没有完成，我们的异常处理向量被放在ROM固件中。由于没有缓存系统，所以没有缓存错误的入口点。我们的CPU也没有支持EIC异常。由于我们的操作系统还没有启动，我们在实现中简单的将所有的ROM异常都直接进行无限循环。
-
-        我们将会使用具体的异常向量表如下：
+        这是我们CPU刚刚启动时处于的状态。由于操作系统的启动还没有完成，我们的异常处理向量被放在ROM固件中。由于没有缓存系统，所以没有缓存错误的入口点。我们的CPU也没有支持EIC异常。由于我们的操作系统还没有启动，我们在实现中简单的将所有的ROM异常都直接进行无限循环。我们将会使用具体的异常向量表如下：
 
         \begin{table}[H]
         \centering
@@ -154,7 +154,7 @@
         \end{tabular}
         \end{table}
 
-        \paragraph{BEV==0: RAM上的异常处理} 
+        \paragraph{BEV==0: RAM上的异常处理}
 
         当操作系统完成自己的异常向量的装载时，就会将此位置零。并且向C0寄存器堆中的EBase寄存器写入我们的异常向量的基址。
         实际上的异常向量基址Base为EBase[29:12]\&0...0，此时我们会用到的异常向量表如下：
@@ -221,24 +221,21 @@
         \end{tabular}
         \end{table}
 
-        \subsubsection{CP0寄存器设置}
-            \paragraph{EPC}
-            如果Cause(BD)为1，也就是异常发生在延迟槽中，实际发生异常的指令就为EPC+4。但是我们返回执行的位置仍然应该是EPC，否则分枝指令的跳转就会无法执行。因此CPU必须在内部记录指令是否在延迟槽内。如果在延迟槽内的指令发生了异常，应该设置PC=EPC-4。
-
-% \subsubsection{硬件实现}
-%    需要实现的硬件部分
-%    寄存器
-%    BadAddr \$8
-%    EntryHi \$10
-%    EntryLo0 \$2
-%    EntryLo1 \$3
-%    Index \$0
-%    PageMask \$5
-%    指令
-%    mfc0 mtc0 tlbwi
-
-
     \subsection{串口}
+    \paragraph{串口的初始化流程}
+    
+    \begin{enumerate}
+    \item 向LCR line control寄存器写入DLAB=1，准备写入波特率。
+    \item 向DLL和DLM写入波特率对应的分频，我们在整个实验中使用的波特率都是9600。
+     \item 向LCR line control寄存器写入数据位、停止位、校验位信息，我们使用的是通用的8数据1停止无校验的模式。同时LCR寄存器中写入DLAB ＝0使得我们能够访问收发寄存器。
+    \item 写入控制信息，关闭modem control，在BIOS实验中我们还要关闭中断。
+    \end{enumerate}
+    
+    \paragraph{用串口发送数据}
+    首先等待之前的发送完成，也就是等待LSR的bit6为1，代表发送数据寄存器THR已经留空而且串口线空闲。 然后写入THR即可。
+    
+    \paragraph{轮询方式从串口读数据}
+    用轮询方式，需要不断检查LSR寄存器的bit0，等到该位为1时，说明有可读入的数据，之后直接读入RBR 寄存器即可。
 
     \subsection{指令集}
     我们采用的是 MIPS32 的标准子集作为指令集，共计 48 条指令，每一条指令是一个 32 位字。由于编译器版本不同，无法保证囊括所有所需指令，可能需要实现这 48 条以外的指令。
@@ -246,6 +243,11 @@
     具体的指令内容详见附录 A 。
 
     \subsection{数据通路}
+    流水线的数据通路示意图如下。（出自《计算机组成与设计~硬件/软件接口》4.6 节）
+    \begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{pipeline.jpg}
+    \end{figure}
 
 
 \section{性能需求}
@@ -274,7 +276,1522 @@ CPLD & 与 FPGA 相连，用于 I/O \\
 \begin{appendices}
 \section{MIPS指令集}
 表中 rs，rt，rd 为寄存器编号，immediate 为立即数。
-%由于奇妙的中文问题，指令集表格需复制黏贴到此处否则无法正常编译。
+
+\begin{table}[H]
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&1&0&0&1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{ADDIU rt is immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ R[s] + Sign-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{对立即数进行符号扩展后与寄存器rs的值求和，结果保存到寄存器rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
+
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&1&0&0&0&0&1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{ADDU rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[s] + R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值求和，结果保存到寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+\begin{table}[H]
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&1&0&1&0&1&0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLT rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<$ R[t]) then R[d] = 1, else R[d] = 0}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{比较寄存器rs与寄存器rt的值并根据结果对寄存器rd赋值}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&1&0&1&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLTI rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<$ Sign-extend(immediate)) R[t] = 1, else R[t] = 0}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{比较寄存器rs与立即数进行符号扩展后的值并根据结果对寄存器rt赋值}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&1&0&1&1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLTIU rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<$ Zero-extend(immediate)) R[t] = 1, else R[t] = 0}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{比较寄存器rs与立即数进行零扩展后的值并根据结果对寄存器rt赋值}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&1&0&1&0&1&1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLTU rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<$ R[t]) R[d] = 1, else R[d] = 0}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{比较寄存器rs与寄存器rt的值并根据结果对寄存器rd赋值}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&1&0&0&0&1&1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SUBU rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[s] - R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{用寄存器rs的值减寄存器rt的值，结果保存到寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+
+\clearpage
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&0&0&0&0&0&0&1&1&0&0&0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MULT rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{HI/LO $\Leftarrow$ R[s] * R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值相乘，保存到寄存器HI/LO中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&0&0&0&0&0&0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+0&1&0&0&1&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MFLO rd}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ LO}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将LO寄存器的值保存到rd寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&0&0&0&0&0&0&0&0&0&0&0&0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&0&1&0&0&0&0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MFHI rd}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ HI}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将HI寄存器的值保存到rd寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&1&0&0&1&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MTLO rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{LO $\Leftarrow$ R[s]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs的值保存到LO寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&1&0&0&0&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MTHI rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{HI $\Leftarrow$ R[s]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs的值保存到HI寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&1&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate} \\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BEQ rs rt immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $=$ R[t]) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+\multirow{2}{*}{功能说明} &
+\multicolumn{16}{l|}{如果寄存器rs与寄存器rt的值相等，则跳转到目的地址执行，否则顺序执}\\
+&\multicolumn{16}{l|}{行下一条指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+1&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&1\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BGEZ rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $>=$ 0) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{如果寄存器rs的值大于等于0，则跳转到目的地址执行，否则顺序执行下}\\
+&\multicolumn{16}{l|}{一条指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&1&1&
+1&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BGTZ rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $>$ 0) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{如果寄存器rs的值大于0，则跳转到目的地址执行，否则顺序执行下一条}\\
+&\multicolumn{16}{l|}{指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&1&1&
+0&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BLEZ rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<=$ 0) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{如果寄存器rs的值小于等于0，则跳转到目的地址执行，否则顺序执行下}\\
+&\multicolumn{16}{l|}{一条指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+1&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BLTZ rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] $<$ 0) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{如果寄存器rs的值小于0，则跳转到目的地址执行，否则顺序执行下一条}\\
+&\multicolumn{16}{l|}{指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&1&0&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{BNE rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{if(R[s] != R[t]) PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{如果寄存器rs与寄存器rt的值不相等，则跳转到目的地址执行，否则顺序}\\
+&\multicolumn{16}{l|}{执行下一条指令}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&1&
+0&
+\multicolumn{10}{c|}{immediate(26bit)}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate(26bit)}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{J immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{PC $\Leftarrow$ PC + Sign-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{无条件跳转目的地址执行}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&1&
+1&
+\multicolumn{10}{c|}{immediate(26bit)}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate(26bit)}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{JAL immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{PC $\Leftarrow$ PC + Sign-extend(immediate), RA $\Leftarrow$ RPC}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{无条件跳转目的地址执行，将延迟槽后一条指令存入RA}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+0&0&1&0&0&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{JALR rs rd}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{PC $\Leftarrow$ R[s], R[d] $\Leftarrow$ RPC}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{无条件跳转目的寄存器rs中所存地址执行，将延时槽后一条指令存入}\\
+&\multicolumn{16}{l|}{R[d]}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+0&0&0&0&0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&0&1&0&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{JR rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{PC $\Leftarrow$ R[s]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{无条件跳转至寄存器rs所存地址执行}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&0&0&1&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{LW rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ MEM[R[s] + Sign-extend(immediate)]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs的值与立即数immediate符号扩展后相加所得存至rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&1&0&1&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SW rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{MEM[R[s] + Sign-extend(immediate)] $\Leftarrow$ R[t]}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{将寄存器rt的值存入寄存器rs的值与立即数immediate符号扩展后相加所}\\
+&\multicolumn{16}{l|}{得地址中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{LB rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ Sign-extend(MEM$\_$Byte[R[s] + Sign-extend(immediate)])}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{将寄存器rs的值与立即数immediate符号扩展后相加所得地址中第一个字}\\
+&\multicolumn{16}{l|}{节取出来符号扩展后保存在寄存器rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&0&1&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{LBU rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ Zero-extend(MEM$\_$Byte[R[s] + Sign-extend(immeidate)])}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{将寄存器rs的值与立即数immediate符号扩展后相加所得地址中的第一个}\\
+&\multicolumn{16}{l|}{字节取出来零扩展后保存在寄存器rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&1&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SB rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{MEM$\_$Byte[R[s] + Sign-extend(immediate) $\Leftarrow$ LOW$\_$BYTE[R[t]]}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{将寄存器rt的最低字节取出来保存在rs的值与立即数immediate符号扩展后}\\
+&\multicolumn{16}{l|}{相加所得地址中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+1&0&0&1&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{AND rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[s] $\&$ R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值相与后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&1&1&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{ANDI rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ R[s] $\&$ Zero-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs的值与立即数零扩展后相与的结果保存至寄存器rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&1&1&1&
+1&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{LUI rt immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ immediate * 65536}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将16为立即数放至寄存器rt的高16位中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+1&0&0&1&1&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{NOR rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ $\sim$(R[s] $\mid$ R[t])}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值或非后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+1&0&0&1&0&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{OR rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[s] $\mid$ R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值相或后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&1&1&0&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{ORI rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ R[s] $\mid$ Zero-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与立即数immediate零扩展后相或的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd}&
+0&0&0&0&0&
+1&0&0&1&1&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{XOR rd rs rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[s] $\wedge$ R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与寄存器rt的值异或后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&1&1&1&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{XORI rt rs immeidate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ R[s] $\land$ Zero-extend(immediate)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rs与立即数immediate零扩展后相异或的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+\multicolumn{5}{c|}{immediate} &
+0&0&0&0&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLL rd rt immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\ll$ immediate}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值逻辑左移寄存器rs中的值位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+0&0&0&0&0&
+0&0&0&1&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SLLV rd rt rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\ll$ R[s]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值逻辑左移寄存器rs中的值位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+\multicolumn{5}{c|}{immediate} &
+0&0&0&0&1&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SRA rd rt immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\gg$ immediate(arithmetic)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值算数右移立即数immediate位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+0&0&0&0&0&
+0&0&0&1&1&
+1\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SRAV rd rt rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\gg$ R[s](arithmatic)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值算数右移寄存器rs中的值位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+\multicolumn{5}{c|}{immediate} &
+0&0&0&0&1&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SRL rd rt immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\gg$ immediate(logical)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值逻辑右移立即数immediate位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+0&0&0&0&0&
+0&0&0&1&1&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SRLV rd rt rs}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\gg$ R[s](logical)}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt中的值逻辑右移寄存器rs中的值位后的结果保存至寄存器rd中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&0&0&0&0&
+0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&0&1&1&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{SYSCALL}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{中断号 $\Leftarrow$ SYSCALL}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{执行后除法中断}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&1&1&1&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{CACHE}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{不做cache，视为NOP}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&1&0&0&0&
+0&1&0&0&0&
+0&0&0&0&0&
+0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&1&1&0&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{ERET}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{PC $\Leftarrow$ EPC}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{返回至EPC寄存器的地址执行，并设置Status寄存器的EXL位为0}\\
+\hline
+\end{tabular}
+\end{table}
+
+\clearpage
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&1&0&0&0&
+0&0&0&0&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+0&0&0&0&0&
+0&0&0&0&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MFC0 rt rd}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ CP0[R[d]]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将协处理器0中的rd寄存器的值保存到rt寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&1&0&0&0&
+0&0&0&1&0&
+0&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{5}{c|}{rd} &
+0&0&0&0&0&
+0&0&0&0&0&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{MTC0 rd rt}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{CP0[R[d]] $\Leftarrow$ R[t]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{将寄存器rt的值保存到协处理器0中的rd寄存器中}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+0&1&0&0&0&
+0&1&0&0&0&
+0&0&0&0&0&
+0\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+0&0&0&0&0&
+0&0&0&0&0&
+0&0&0&0&1&
+0\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{TLBWI}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[d] $\Leftarrow$ R[t] $\ll$ R[s]}\\
+\hline
+功能说明&
+\multicolumn{16}{l|}{写索引TLB项}\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multirow{2}{*}{二进制（高位）} &
+31&30&29&28&27&26&25&24&23&22&21&20&19&18&17&16\\
+\cline{2-17}
+&
+1&0&0&1&0&
+1&
+\multicolumn{5}{c|}{rs}&
+\multicolumn{5}{c|}{rt}\\
+\hline
+\multirow{2}{*}{二进制（低位）} &
+15&14&13&12&11&10&9&8&7&6&5&4&3&2&1&0\\
+\cline{2-17}
+&
+\multicolumn{16}{c|}{immediate}\\
+\hline
+MIPS语言&
+\multicolumn{16}{l|}{LHU rt rs immediate}\\
+\hline
+指令功能&
+\multicolumn{16}{l|}{R[t] $\Leftarrow$ Zero-extend(MEM$\_$HALFWORD[R[s] + Sign-extend(immediate)])}\\
+\hline
+\multirow{2}{*}{功能说明}&
+\multicolumn{16}{l|}{将寄存器rt中的值与立即数immediate符号扩展后相加所得地址中的低}\\
+&\multicolumn{16}{l|}{两个字节取出来零扩展后保存在寄存器rt中}\\
+\hline
+\end{tabular}
+\end{table}
+
 \end{appendices}
 
 \end{document}
